# bug-poetry2nix-opencv

./: flake.nix  pyproject.toml
