[ tool.poetry ]
name = "test"
version = "0.1.0"
description = ""
authors = ["Guillaume Desforges <guillaume.desforges@tweag.io>"]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.5.5.64"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
